Rename libsmb2_ips to rpc and others to libsmb2. @fjtrujy suggestion for ps2sdk-ports.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,12 +248,12 @@ else()
       add_compile_options("${CMAKE_C_FLAGS}")
     elseif(EE)
       add_definitions(-DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV -DNEED_GETLOGIN_R)
-      if(PLATFORM_PS2 AND EE AND PS2IPS)
-        add_definitions(-DPS2IPS)
+      if(EE AND PS2RPC)
+        add_definitions(-DPS2RPC)
       endif()      
     elseif(IOP)
       add_definitions(-DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_STRDUP -DNEED_READV -DNEED_WRITEV -DNEED_POLL -DNEED_GETPID -DNEED_RANDOM -DNEED_SRANDOM -DNEED_GETLOGIN_R -DHAVE_STRING_H -DHAVE_SYS_FCNTL_H)
-      if(PLATFORM_PS2 AND IOP AND BUILD_IRX)
+      if(IOP AND BUILD_IRX)
         add_definitions(-D__ps2sdk_iop__)
       endif()
       set(CMAKE_C_FLAGS "-Wall") 
