--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,109 +1,119 @@
-if(PICO_BOARD)
-   add_library(libsmb2 STATIC
-            lib/aes.c
-            lib/aes128ccm.c
-            lib/alloc.c
-			lib/compat.c
-            lib/dcerpc.c
-            lib/dcerpc-lsa.c
-            lib/dcerpc-srvsvc.c
-            lib/errors.c
-			lib/hmac.c
-            lib/hmac-md5.c
-            lib/init.c
-            lib/krb5-wrapper.c
-            lib/libsmb2.c
-            lib/md4c.c
-            lib/md5.c
-            lib/ntlmssp.c
-            lib/pdu.c
-            lib/sha1.c
-            lib/sha224-256.c
-            lib/sha384-512.c
-            lib/smb2-cmd-close.c
-            lib/smb2-cmd-create.c
-            lib/smb2-cmd-echo.c
-            lib/smb2-cmd-error.c
-            lib/smb2-cmd-flush.c
-            lib/smb2-cmd-ioctl.c
-            lib/smb2-cmd-logoff.c
-            lib/smb2-cmd-negotiate.c
-            lib/smb2-cmd-query-directory.c
-            lib/smb2-cmd-query-info.c
-            lib/smb2-cmd-read.c
-            lib/smb2-cmd-session-setup.c
-            lib/smb2-cmd-set-info.c
-            lib/smb2-cmd-tree-connect.c
-            lib/smb2-cmd-tree-disconnect.c
-            lib/smb2-cmd-write.c
-            lib/smb2-data-file-info.c
-            lib/smb2-data-filesystem-info.c
-            lib/smb2-data-security-descriptor.c
-            lib/smb2-data-reparse-point.c
-            lib/smb2-share-enum.c
-            lib/smb3-seal.c
-            lib/smb2-signing.c
-            lib/socket.c
-            lib/sync.c
-            lib/timestamps.c
-            lib/unicode.c
-            lib/usha.c
-    )
-elseif(ESP_PLATFORM)
+if(GSSAPI_FOUND OR LIBKRB5_FOUND)
+  set(KRB5_SOURCE krb5-wrapper.c)
+endif()
+
+if(ESP_PLATFORM)
   set(COMPONENT_SRCS
-    lib/aes.c
-    lib/aes128ccm.c
-    lib/alloc.c
-	lib/compat.c
-    lib/dcerpc.c
-    lib/dcerpc-lsa.c
-    lib/dcerpc-srvsvc.c
-    lib/errors.c
-    lib/init.c
-    lib/hmac.c
-    lib/hmac-md5.c
-    lib/krb5-wrapper.c
-    lib/libsmb2.c
-    lib/md4c.c
-    lib/md5.c
-    lib/ntlmssp.c
-    lib/pdu.c
-    lib/sha1.c
-    lib/sha224-256.c
-    lib/sha384-512.c
-    lib/smb2-cmd-close.c
-    lib/smb2-cmd-create.c
-    lib/smb2-cmd-echo.c
-    lib/smb2-cmd-error.c
-    lib/smb2-cmd-flush.c
-    lib/smb2-cmd-ioctl.c
-    lib/smb2-cmd-logoff.c
-    lib/smb2-cmd-negotiate.c
-    lib/smb2-cmd-query-directory.c
-    lib/smb2-cmd-query-info.c
-    lib/smb2-cmd-read.c
-    lib/smb2-cmd-session-setup.c
-    lib/smb2-cmd-set-info.c
-    lib/smb2-cmd-tree-connect.c
-    lib/smb2-cmd-tree-disconnect.c
-    lib/smb2-cmd-write.c
-    lib/smb2-data-file-info.c
-    lib/smb2-data-filesystem-info.c
-    lib/smb2-data-security-descriptor.c
-    lib/smb2-data-reparse-point.c
-    lib/smb2-share-enum.c
-    lib/smb3-seal.c
-    lib/smb2-signing.c
-    lib/socket.c
-    lib/sync.c
-    lib/timestamps.c
-    lib/unicode.c
-    lib/usha.c
+    aes.c
+    aes128ccm.c
+    alloc.c
+	compat.c
+    dcerpc.c
+    dcerpc-lsa.c
+    dcerpc-srvsvc.c
+    errors.c
+    init.c
+    hmac.c
+    hmac-md5.c
+    ${KRB5_SOURCE}
+    libsmb2.c
+    md4c.c
+    md5.c
+    ntlmssp.c
+    pdu.c
+    sha1.c
+    sha224-256.c
+    sha384-512.c
+    smb2-cmd-close.c
+    smb2-cmd-create.c
+    smb2-cmd-echo.c
+    smb2-cmd-error.c
+    smb2-cmd-flush.c
+    smb2-cmd-ioctl.c
+    smb2-cmd-logoff.c
+    smb2-cmd-negotiate.c
+    smb2-cmd-query-directory.c
+    smb2-cmd-query-info.c
+    smb2-cmd-read.c
+    smb2-cmd-session-setup.c
+    smb2-cmd-set-info.c
+    smb2-cmd-tree-connect.c
+    smb2-cmd-tree-disconnect.c
+    smb2-cmd-write.c
+    smb2-data-file-info.c
+    smb2-data-filesystem-info.c
+    smb2-data-security-descriptor.c
+    smb2-data-reparse-point.c
+    smb2-share-enum.c
+    smb3-seal.c
+    smb2-signing.c
+    socket.c
+    sync.c
+    timestamps.c
+    unicode.c
+    usha.c
   )
 
   set(COMPONENT_NAME ".")
 
-  register_component()  
+  register_component()
+
+elseif(IOP AND BUILD_IRX)
+  set(SOURCES 
+            ps2/smb2_fio.c
+            ps2/smb2man.c
+            ps2/imports.c
+            aes.c
+            aes128ccm.c
+            alloc.c
+			compat.c
+            dcerpc.c
+            dcerpc-lsa.c
+            dcerpc-srvsvc.c
+            errors.c
+            hmac.c
+            hmac-md5.c			
+            init.c
+            ${KRB5_SOURCE}
+            libsmb2.c
+            md4c.c
+            md5.c
+            ntlmssp.c
+            pdu.c
+	    sha1.c
+	    sha224-256.c
+	    sha384-512.c
+            smb2-cmd-close.c
+            smb2-cmd-create.c
+            smb2-cmd-echo.c
+            smb2-cmd-error.c
+            smb2-cmd-flush.c
+            smb2-cmd-ioctl.c
+            smb2-cmd-logoff.c
+            smb2-cmd-negotiate.c
+            smb2-cmd-query-directory.c
+            smb2-cmd-query-info.c
+            smb2-cmd-read.c
+            smb2-cmd-session-setup.c
+            smb2-cmd-set-info.c
+            smb2-cmd-tree-connect.c
+            smb2-cmd-tree-disconnect.c
+            smb2-cmd-write.c
+            smb2-data-file-info.c
+            smb2-data-filesystem-info.c
+            smb2-data-security-descriptor.c
+            smb2-data-reparse-point.c
+	    smb2-share-enum.c
+	    smb3-seal.c
+	    smb2-signing.c
+            socket.c
+            sync.c
+            timestamps.c
+            unicode.c
+	    usha.c)
+
+BUILD_IOP_IMPORTS(${CMAKE_CURRENT_SOURCE_DIR}/ps2/imports.c ${CMAKE_CURRENT_SOURCE_DIR}/ps2/imports.lst)
+
 else()
   set(SOURCES aes.c
             aes128ccm.c
@@ -116,7 +126,7 @@ else()
             hmac.c
             hmac-md5.c			
             init.c
-            krb5-wrapper.c
+            ${KRB5_SOURCE}
             libsmb2.c
             md4c.c
             md5.c
@@ -155,7 +165,7 @@ else()
 	    usha.c)
 endif()
 
-if(NOT PICO_BOARD OR NOT ESP_PLATFORM)
+if(NOT ESP_PLATFORM)
 set(INCLUDE_PATH ../include)
 set(SMB2_INCLUDE "${INCLUDE_PATH}/smb2")
 set(HEADERS
@@ -167,27 +177,37 @@ set(HEADERS
     ${SMB2_INCLUDE}/smb2-errors.h
     ${SMB2_INCLUDE}/smb2.h)
 
-if(EE AND NOT PLATFORM_PS2 AND NOT PS2IPS)
+if(EE AND NOT PS2IPS)
 add_library(smb2_ip ${SOURCES} ${HEADERS})
 target_link_libraries(smb2_ip PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
 target_include_directories(smb2_ip PUBLIC ${INCLUDE_PATH})
 set_target_properties(smb2_ip PROPERTIES
                            VERSION ${PROJECT_VERSION}
                            SOVERSION ${SOVERSION})
-elseif(PLATFORM_PS2 AND EE AND PS2IPS)
+elseif(EE AND PS2IPS)
 add_library(smb2_ips ${SOURCES} ${HEADERS})
 target_link_libraries(smb2_ips PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
 target_include_directories(smb2_ips PUBLIC ${INCLUDE_PATH})
 set_target_properties(smb2_ips PROPERTIES
                            VERSION ${PROJECT_VERSION}
                            SOVERSION ${SOVERSION})                           
-elseif(IOP)
+elseif(IOP AND NOT BUILD_IRX)
 add_library(smb2_iop ${SOURCES} ${HEADERS})
 target_link_libraries(smb2_iop PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
 target_include_directories(smb2_iop PUBLIC ${INCLUDE_PATH})
 set_target_properties(smb2_iop PROPERTIES
                            VERSION ${PROJECT_VERSION}
-                           SOVERSION ${SOVERSION})                       
+                           SOVERSION ${SOVERSION})
+elseif(IOP AND BUILD_IRX)
+add_executable(smb2man.irx ${SOURCES})
+
+target_link_libraries(smb2man.irx
+	PRIVATE
+	gcc)
+
+add_custom_command(TARGET smb2man.irx POST_BUILD COMMAND md5sum ARGS smb2man.irx)
+elseif(PICO_BOARD)
+add_library(libsmb2 STATIC ${SOURCES})
 else()
 add_library(smb2 ${SOURCES} ${HEADERS})
 target_link_libraries(smb2 PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
@@ -208,21 +228,28 @@ else()
 endif()
 
 if(NOT PICO_BOARD OR NOT ESP_PLATFORM)
-if(EE AND NOT PLATFORM_PS2 AND NOT PS2IPS)
+if(EE AND NOT PS2IPS)
 install(TARGETS smb2_ip EXPORT smb2_ip
                      RUNTIME DESTINATION bin
                      ARCHIVE DESTINATION lib${LIB_SUFFIX}
                      LIBRARY DESTINATION lib${LIB_SUFFIX})
-elseif(PLATFORM_PS2 AND EE AND PS2IPS)
+elseif(EE AND PS2IPS)
 install(TARGETS smb2_ips EXPORT smb2_ips
                      RUNTIME DESTINATION bin
                      ARCHIVE DESTINATION lib${LIB_SUFFIX}
                      LIBRARY DESTINATION lib${LIB_SUFFIX})                     
-elseif(IOP)
+elseif(IOP AND NOT BUILD_IRX)
 install(TARGETS smb2_iop EXPORT smb2_iop
                      RUNTIME DESTINATION bin
                      ARCHIVE DESTINATION lib${LIB_SUFFIX}
                      LIBRARY DESTINATION lib${LIB_SUFFIX})
+elseif(IOP AND BUILD_IRX)
+install(FILES ps2/ps2smb2.h
+DESTINATION ${PS2SDK}/common/include)
+install(TARGETS smb2man.irx EXPORT smb2man.irx
+                            RUNTIME DESTINATION bin
+                            ARCHIVE DESTINATION smb2man.irx
+                            LIBRARY DESTINATION smb2man.irx)                    
 else()
 install(TARGETS smb2 EXPORT smb2
                      RUNTIME DESTINATION bin
