--- a/Makefile.platform
+++ b/Makefile.platform
@@ -88,11 +88,11 @@ ps2_iop_install: ps2_iop_all
 	cmake --build build --target install
 
 ps2_irx_all:
-	cmake -S . -B lib/ps2/build -DBUILD_IRX=1 "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev_iop.cmake" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports_iop/irx" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports_irx"
-	cmake --build lib/ps2/build
+	cmake -S . -B build -DBUILD_IRX=1 "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev_iop.cmake" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports_iop/irx" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports_irx"
+	cmake --build build
 	
 ps2_irx_install: ps2_irx_all
-	cmake --build lib/ps2/build --target install
+	cmake --build build --target install
 
 ps4_all:
 	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=/opt/pacbrew/ps4/openorbis/cmake/ps4.cmake" "-DCMAKE_INSTALL_PREFIX=/opt/pacbrew/ps4/openorbis/" "-DCMAKE_PREFIX_PATH=/opt/pacbrew/ps4/openorbis/"
