Removed deprecated bins

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -177,20 +177,13 @@ set(HEADERS
     ${SMB2_INCLUDE}/smb2-errors.h
     ${SMB2_INCLUDE}/smb2.h)
 
-if(EE AND PS1RPC)
-add_library(smb2_ips ${SOURCES} ${HEADERS})
+if(EE AND PS2RPC)
+add_library(smb2_rpc ${SOURCES} ${HEADERS})
 target_link_libraries(smb2_rpc PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
 target_include_directories(smb2_rpc PUBLIC ${INCLUDE_PATH})
 set_target_properties(smb2_rpc PROPERTIES
                            VERSION ${PROJECT_VERSION}
                            SOVERSION ${SOVERSION})                           
-elseif(IOP AND NOT BUILD_IRX)
-add_library(smb2_iop ${SOURCES} ${HEADERS})
-target_link_libraries(smb2_iop PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
-target_include_directories(smb2_iop PUBLIC ${INCLUDE_PATH})
-set_target_properties(smb2_iop PROPERTIES
-                           VERSION ${PROJECT_VERSION}
-                           SOVERSION ${SOVERSION})
 elseif(IOP AND BUILD_IRX)
 add_executable(smb2man.irx ${SOURCES})
 
@@ -222,15 +215,10 @@ endif()
 
 if(NOT PICO_BOARD OR NOT ESP_PLATFORM)
 if(EE AND PS2RPC)
-install(TARGETS smb2_ips EXPORT smb2_rpc
+install(TARGETS smb2_rpc EXPORT smb2_rpc
                      RUNTIME DESTINATION bin
                      ARCHIVE DESTINATION lib${LIB_SUFFIX}
                      LIBRARY DESTINATION lib${LIB_SUFFIX})                     
-elseif(IOP AND NOT BUILD_IRX)
-install(TARGETS smb2_iop EXPORT smb2_iop
-                     RUNTIME DESTINATION bin
-                     ARCHIVE DESTINATION lib${LIB_SUFFIX}
-                     LIBRARY DESTINATION lib${LIB_SUFFIX})
 elseif(IOP AND BUILD_IRX)
 install(FILES ps2/ps2smb2.h
 DESTINATION ${PS2SDK}/common/include)
