Add ps3 to configure.ac.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -95,17 +95,17 @@ jobs:
       id: slug
       run: |
         echo "sha_name=$(echo ${GITHUB_SHA} | cut -c1-8)" >> $GITHUB_ENV
+    
       # using pre-compiled sdk
     - name: Download PSL1GHT Toolchain
       run: |
         curl -sL https://github.com/bucanero/ps3toolchain/releases/download/ubuntu-latest-fad3b5fb/ps3dev-ubuntu-latest-2020-08-31.tar.gz | tar xvz -C ./
         echo "PS3DEV=${GITHUB_WORKSPACE}/ps3dev" >> $GITHUB_ENV
-        echo "PSL1GHT=${GITHUB_WORKSPACE}/ps3dev" >> $GITHUB_ENV
+        echo "PSL1GHT=${GITHUB_WORKSPACE}/ps3dev" >> $GITHUB_ENV     
+
     - name: build libsmb2
       run: |
-        cd lib
-        make -f Makefile.PS3_PPU clean
-        make -f Makefile.PS3_PPU
+        make ps3_ppu_install -f Makefile.platform
     
   build-ps4:
     name: PS4
